--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
         body, html {
             margin: 0; padding: 0; height: 100%;
-            background-color: #020617; /* Fallback deep blue/black */
+            background-color: #020617; 
             font-family: 'Cinzel', serif;
             overflow: hidden;
         }
 
-        /* The Custom Background Graphic Fix */
+        /* The Custom Background Graphic - Root Path Fix */
         .bg-overlay {
             position: fixed;
             top: 0; left: 0; 
             width: 100vw; height: 100vh;
             background: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.85) 100%), 
-                        url('background.png'); /* Removed the ./ for better GitHub compatibility */
+                        url('background.png'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -55,10 +55,10 @@
         }
 
         .gate-card {
-            background: rgba(0, 0, 0, 0.7);
-            backdrop-filter: blur(8px);
-            border: 1px solid rgba(16, 185, 129, 0.3);
-            box-shadow: 0 0 60px rgba(0,0,0,1);
+            background: rgba(0, 0, 0, 0.75);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(16, 185, 129, 0.4);
+            box-shadow: 0 0 80px rgba(0,0,0,1);
             width: 90%;
             max-width: 600px;
         }
@@ -94,7 +94,7 @@
 
     <div class="p-8 md:p-12 gate-card text-center rounded-sm border-t-4 border-emerald-500">
         
-        <h1 class="bleeding-header mb-2">Zombie Lord's</h1>
+        <h1 class="bleeding-header mb-2 text-white">Zombie Lord's</h1>
         <p class="emerald-glow-text text-xs md:text-sm uppercase mb-10">Playhouse</p>
 
         <p class="text-slate-300 text-sm italic mb-12 max-w-md mx-auto leading-relaxed px-4">
@@ -105,12 +105,12 @@
 
         <button onclick="loginWithGoogle()" class="group relative mx-auto w-full max-w-xs bg-white text-slate-950 py-4 px-6 rounded-sm font-black flex items-center justify-center gap-4 transition-all hover:bg-emerald-500 hover:text-white active:scale-95 shadow-2xl">
             <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="20" alt="Google">
-            <span class="uppercase text-xs tracking-widest">Enter at your own Risk</span>
+            <span class="uppercase text-xs tracking-widest font-bold">Enter at your own Risk</span>
         </button>
 
-        <div class="mt-12 opacity-40 flex flex-col items-center">
+        <div class="mt-12 opacity-50 flex flex-col items-center">
             <img src="https://img.icons8.com/ios-filled/50/10b981/skull.png" width="24" class="mb-2">
-            <p class="text-[8px] tracking-[0.6em] text-emerald-500 font-bold uppercase">M11 Secure Verification</p>
+            <p class="text-[8px] tracking-[0.6em] text-emerald-500 font-bold uppercase">Secure M11 Access</p>
         </div>
     </div>
 
