Fix background image URL in index.html
Updated background image URL to point to GitHub hosted file.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             overflow: hidden;
         }
 
-        /* The Background Fix - Now pointing to background.png */
+        /* ABSOLUTE PATH FIX: Points directly to your GitHub hosted file */
         .bg-overlay {
             position: fixed;
             top: 0; left: 0; 
             width: 100vw; height: 100vh;
             background: linear-gradient(to bottom, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.9) 100%), 
-                        url('background.png'); 
+                        url('https://zomb13lord.github.io/zombielords-playhouse/background.png'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
