Refactor index.html for better layout and design
Updated styles and structure for improved aesthetics and responsiveness.

--- a/index.html
+++ b/index.html
@@ -5,89 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zombie Lord's Playhouse | Gate</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@900&family=Creepster&display=swap');
 
-        /* Clean Background Implementation */
         body {
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            margin: 0; padding: 0; min-height: 100vh;
+            display: flex; align-items: center; justify-content: center;
             background-color: #020617;
-            /* Using the absolute URL that we verified works */
-            background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.9)), 
+            /* Lighter mobile gradient: 20% top, 70% bottom */
+            background-image: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.7) 100%), 
                               url('https://zomb13lord.github.io/zombielords-playhouse/background.png');
             background-size: cover;
-            background-position: center;
+            background-position: center 20%; /* Brings the King's face higher up on mobile */
             background-attachment: fixed;
             font-family: 'Cinzel', serif;
             color: white;
         }
 
-        /* Gothic Decayed Header */
         .bleeding-header {
             font-family: 'Creepster', system-ui;
-            font-size: clamp(3rem, 10vw, 5rem);
-            color: #ffffff;
-            text-transform: uppercase;
-            letter-spacing: 4px;
-            line-height: 1.1;
-            text-shadow: 
-                0 0 15px rgba(16, 185, 129, 0.6),
-                2px 2px 0px #700, 
-                4px 6px 8px rgba(0, 0, 0, 0.8);
+            font-size: clamp(2.5rem, 12vw, 5rem);
+            color: #ffffff; text-transform: uppercase; letter-spacing: 2px; line-height: 1;
+            text-shadow: 0 0 10px rgba(16, 185, 129, 0.8), 2px 2px 0px #800, 4px 7px 5px rgba(128, 0, 0, 0.5);
         }
 
-        .emerald-glow-text {
-            color: #10b981;
-            text-shadow: 0 0 10px rgba(16, 185, 129, 0.5);
-            letter-spacing: 0.6em;
-            font-weight: 900;
-            font-size: 0.75rem;
-        }
-
-        /* Glassmorphism Card Container */
         .gate-card {
-            background: rgba(2, 6, 23, 0.85);
-            backdrop-filter: blur(16px);
-            -webkit-backdrop-filter: blur(16px);
-            border: 1px solid rgba(16, 185, 129, 0.3);
-            box-shadow: 0 0 100px rgba(0,0,0,0.9);
-            width: 92%;
-            max-width: 600px;
-            padding: 3.5rem 2rem;
-            text-align: center;
-            border-top: 3px solid #10b981;
-            border-radius: 4px;
+            background: rgba(0, 0, 0, 0.7); /* Slightly more transparent to see the king */
+            backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
+            border: 1px solid rgba(16, 185, 129, 0.4);
+            box-shadow: 0 0 80px rgba(0,0,0,1);
+            width: 90%; max-width: 500px; padding: 2.5rem 1.5rem; text-align: center; border-top: 4px solid #10b981;
         }
 
-        /* The King's Button */
-        .wicked-button {
-            background: white;
-            color: #020617;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            border-bottom: 4px solid #cbd5e1;
+        .wicked-btn {
+            background: white; color: #020617; font-weight: 900; text-transform: uppercase;
+            letter-spacing: 0.1em; transition: all 0.2s; border-bottom: 4px solid #94a3b8;
         }
-
-        .wicked-button:hover {
-            background: #10b981;
-            color: white;
-            transform: translateY(-2px);
-            border-bottom-color: #059669;
-            letter-spacing: 0.1em;
-        }
-
-        .wicked-button:active {
-            transform: translateY(2px);
-            border-bottom-width: 0px;
-        }
+        .wicked-btn:active { transform: scale(0.98); border-bottom-width: 0; }
     </style>
 
     <script>
@@ -99,46 +56,34 @@
             messagingSenderId: "795162260246",
             appId: "1:795162260246:web:97f0361751ac1359b31637"
         };
-
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
 
         async function loginWithGoogle() {
             const provider = new firebase.auth.GoogleAuthProvider();
             try {
-                const result = await auth.signInWithPopup(provider);
-                if (result.user) {
-                    window.location.href = "lobby.html";
-                }
+                await auth.signInWithPopup(provider);
+                window.location.href = "lobby.html";
             } catch (error) {
-                console.error("The Lord rejects your soul:", error);
                 alert("The Lord rejects your soul: " + error.message);
             }
         }
     </script>
 </head>
 <body>
-
     <div class="gate-card">
         <h1 class="bleeding-header mb-2">Zombie Lord's</h1>
-        <p class="emerald-glow-text uppercase mb-12">Playhouse</p>
-
-        <p class="text-slate-300 text-sm italic mb-12 leading-relaxed px-6 font-serif">
+        <p class="text-[10px] text-emerald-400 font-bold uppercase tracking-[0.6em] mb-10">Playhouse</p>
+        <p class="text-slate-200 text-xs italic mb-10 leading-relaxed font-serif">
             "Kneel before the <span class="text-emerald-400 font-bold uppercase">Zombie Lord</span> upon the Emerald Shard Throne, 
-            amidst the ruins of lost innocence and <span class="text-emerald-500/80 uppercase">broken dreams</span>, 
+            amidst the ruins of lost innocence and <span class="text-emerald-500/80 uppercase font-bold">broken dreams</span>, 
             only the wicked may enter!"
         </p>
-
-        <button onclick="loginWithGoogle()" class="wicked-button relative mx-auto w-full max-w-xs py-4 px-8 font-black flex items-center justify-center gap-4 shadow-2xl">
-            <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="20" alt="Google">
-            <span class="uppercase text-xs tracking-widest font-bold">Enter at your own Risk</span>
+        <button onclick="loginWithGoogle()" class="wicked-btn w-full py-4 rounded-sm flex items-center justify-center gap-3">
+            <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" width="18" alt="G">
+            <span class="text-[11px]">Enter at your own Risk</span>
         </button>
-
-        <div class="mt-16 opacity-30 flex flex-col items-center">
-            <div class="w-16 h-[1px] bg-emerald-900/50 mb-4"></div>
-            <p class="text-[9px] tracking-[0.6em] text-emerald-500 font-bold uppercase">M11 Secure Entry</p>
-        </div>
+        <p class="mt-8 text-[8px] tracking-[0.4em] text-emerald-500/50 font-bold uppercase">M11 Secure Entry</p>
     </div>
-
 </body>
 </html>
