Update lobby title and styling for Roulette Suite

--- a/lobby.html
+++ b/lobby.html
@@ -3,108 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playhouse Lobby | Zombie Lord's</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-
+    <title>Roulette Suite | Lobby</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&display=swap');
+        :root {
+            --bg-dark: #0f172a;
+            --card-bg: #1e293b;
+            --accent-blue: #38bdf8;
+            --accent-green: #10b981;
+            --text-main: #f8fafc;
+            --text-dim: #94a3b8;
+        }
 
         body {
-            margin: 0; padding: 0;
-            background-color: #020617;
-            color: #f8fafc;
-            font-family: 'Cinzel', serif;
-            min-height: 100vh;
-            /* Balanced gradient for mobile visibility */
-            background-image: linear-gradient(to bottom, rgba(2, 6, 23, 0.3) 0%, rgba(2, 6, 23, 0.9) 100%), 
-                              url('https://zomb13lord.github.io/zombielords-playhouse/background.png');
-            background-size: cover;
-            background-position: center 15%;
-            background-attachment: fixed;
+            font-family: 'Segoe UI', Roboto, sans-serif;
+            background-color: var(--bg-dark);
+            color: var(--text-main);
+            margin: 0;
+            padding: 2rem;
         }
 
-        .shard-card {
-            background: rgba(15, 23, 42, 0.7);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border: 1px solid rgba(16, 185, 129, 0.3);
-            transition: all 0.3s ease;
+        .header {
+            text-align: center;
+            margin-bottom: 3rem;
         }
 
-        .shard-card:hover {
-            border-color: #10b981;
-            box-shadow: 0 0 25px rgba(16, 185, 129, 0.3);
+        .header h1 { font-size: 2.5rem; margin-bottom: 0.5rem; }
+        .header p { color: var(--text-dim); }
+
+        /* The Grid System */
+        .lobby-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        /* Base Card Styling */
+        .card {
+            background: var(--card-bg);
+            border-radius: 12px;
+            padding: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            transition: transform 0.2s, box-shadow 0.2s;
+            border: 1px solid rgba(255,255,255,0.1);
+        }
+
+        .card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.3);
         }
 
-        .emerald-text {
-            color: #10b981;
-            text-shadow: 0 0 10px rgba(16, 185, 129, 0.5);
+        .badge {
+            font-size: 0.75rem;
+            padding: 0.25rem 0.6rem;
+            border-radius: 50px;
+            font-weight: bold;
+            display: inline-block;
+            margin-bottom: 1rem;
         }
+
+        /* Card 1: Active Development */
+        .main-tracker { border-top: 4px solid var(--accent-blue); }
+        .badge-dev { background: var(--accent-blue); color: #000; }
+
+        /* Card 2: Legacy Version 50 */
+        .legacy-tracker { border-top: 4px solid var(--accent-green); }
+        .badge-stable { background: var(--accent-green); color: #000; }
+
+        h2 { margin: 0 0 1rem 0; font-size: 1.5rem; }
+        p { line-height: 1.6; color: var(--text-dim); margin-bottom: 2rem; }
+
+        .btn {
+            display: block;
+            text-align: center;
+            text-decoration: none;
+            padding: 0.8rem;
+            border-radius: 6px;
+            font-weight: bold;
+            transition: filter 0.2s;
+        }
+
+        .btn-main { background: var(--accent-blue); color: #000; }
+        .btn-stable { background: var(--accent-green); color: #000; }
+        .btn:hover { filter: brightness(1.2); }
+
     </style>
-
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyBSUXdz7HqwkENhQqEJLItxYm-LAwkgbmY",
-            authDomain: "zombielords-playhouse.firebaseapp.com",
-            projectId: "zombielords-playhouse",
-            storageBucket: "zombielords-playhouse.firebasestorage.app",
-            messagingSenderId: "795162260246",
-            appId: "1:795162260246:web:97f0361751ac1359b31637"
-        };
-
-        firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-
-        auth.onAuthStateChanged(user => {
-            if (!user) {
-                window.location.href = "index.html";
-            } else {
-                document.getElementById('user-tag').innerText = user.displayName || "Wicked Soul";
-            }
-        });
-
-        function logout() {
-            auth.signOut().then(() => { window.location.href = "index.html"; });
-        }
-    </script>
 </head>
-<body class="flex flex-col">
+<body>
 
-    <nav class="p-6 flex justify-between items-center bg-slate-950/40 backdrop-blur-md border-b border-emerald-900/30 sticky top-0 z-50">
-        <h2 class="text-lg font-black emerald-text tracking-tighter uppercase">Zombie Lord's</h2>
-        <div class="flex items-center gap-4">
-            <span id="user-tag" class="text-[9px] tracking-[0.2em] uppercase text-slate-400 font-bold"></span>
-            <button onclick="logout()" class="text-[9px] border border-red-900/50 px-3 py-1 bg-red-950/20 hover:bg-red-900/40 text-red-400 transition-all uppercase font-bold tracking-widest">Abandon</button>
-        </div>
-    </nav>
+    <header class="header">
+        <h1>Roulette Analysis Suite</h1>
+        <p>Select a tracker version to begin your session.</p>
+    </header>
 
-    <main class="flex-grow flex flex-col items-center justify-center p-6 md:p-12">
-        <header class="mb-12 text-center pt-20 md:pt-0">
-            <h1 class="text-4xl md:text-6xl font-black mb-2 tracking-tight uppercase">Playhouse</h1>
-            <p class="text-emerald-500/80 text-[10px] tracking-[0.4em] uppercase font-bold">Select Your Trial</p>
-        </header>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 w-full max-w-4xl">
-            <div class="shard-card p-8 rounded-sm cursor-pointer group" onclick="window.location.href='roulette.html'">
-                <div class="text-4xl mb-6 grayscale group-hover:grayscale-0 transition-all duration-500">🎡</div>
-                <h3 class="text-xl font-black mb-3 uppercase tracking-wider group-hover:emerald-text transition-colors">Roulette Engine</h3>
-                <p class="text-slate-400 text-xs leading-relaxed mb-8 font-serif italic">9-Street Hybrid Analysis. Monitor the wheel through the eyes of the Emerald King.</p>
-                <div class="text-[10px] font-bold text-emerald-400 tracking-[0.3em] uppercase border-t border-emerald-900/30 pt-4">Begin Session &rarr;</div>
+    <div class="lobby-grid">
+        
+        <div class="card main-tracker">
+            <div>
+                <span class="badge badge-dev">V.6.0 DEVELOPMENT</span>
+                <h2>Strategic Engine</h2>
+                <p>Features independent unit tracking, dynamic lookback windows, and advanced "Staircase" Martingale recovery logic.</p>
             </div>
-
-            <div class="shard-card p-8 rounded-sm opacity-50 grayscale relative overflow-hidden">
-                <div class="text-4xl mb-6">🎲</div>
-                <h3 class="text-xl font-black mb-3 uppercase tracking-wider text-slate-500">Dice Master</h3>
-                <p class="text-slate-400 text-xs leading-relaxed mb-8 font-serif italic">Fate is not yet ready to be written in the bones.</p>
-                <div class="absolute top-4 right-4 text-[8px] bg-slate-900/80 border border-slate-700 px-2 py-1 tracking-widest uppercase font-bold text-slate-500">Locked</div>
-                <div class="text-[10px] font-bold text-slate-600 tracking-[0.3em] uppercase border-t border-slate-800 pt-4">In Development</div>
-            </div>
+            <a href="roulette.html" class="btn btn-main">Launch Strategic Engine</a>
         </div>
-    </main>
+
+        <div class="card legacy-tracker">
+            <div>
+                <span class="badge badge-stable">V.50 STABLE</span>
+                <h2>Legacy Utility</h2>
+                <p>The proven, theme-free stable release. Use this for standard tracking without the new lookback engine.</p>
+            </div>
+            <a href="v50/roulette.html" class="btn btn-stable">Launch Stable V.50</a>
+        </div>
+
+    </div>
 
 </body>
 </html>
